Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52073

Qt 5.6/Windows: Test qtdeclarative\tests\auto\qml\debugger\qqmldebuglocal asserts/fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.1
    • 5.6.0
    • Core: Other
    • Windows 10, MSVC 2015,64bit, others
    • 24411e9743735d6323f1d3686f8b989a5122f83b

    Description

      See https://codereview.qt-project.org/#/c/153638/

      Suspicion so far is that sth broke in QLocalSocket.

      The debugger tries to write sth onto the local socket in signal newConnection(), which fails.

      Assert is:

      FATAL : tst_QQmlDebugLocal::initTestCase() ASSERT: "writeBytes == p.b.size()" in file ..\..\..\..\..\src\plugins\qmltooling\shared\qpacketprotocol.cpp, line 289
      

      Introduced by "Make QWindowsPipeWriter thread-free." 0307c008bf71e1272385d0e7f7c8d2c5a1ba6526 (https://codereview.qt-project.org/#/c/152304/ )

      Attachments

        1. qgbug52073_assert_stack.txt
          19 kB
          Friedemann Kleint

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jbornema Joerg Bornemann
              kleint Friedemann Kleint
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes